--- a/second/main.css
+++ b/second/main.css
@@ -221,4 +221,109 @@
    font-size: 12px;
    color: #8A2BE2;
 }
+ .main1 {
+   font-size: 70px;
+   font-weight: 700;
+   text-align: center;
+   margin-left: 195px;
+ }
+.main2 {
+   text-align: center;
+   position: absolute;
+   top: 0;
+   left: 0;
+   right: 0;
+   margin-top: 485px;
+   margin-left: -355px;
+   font-size: 20px;
+}
+.main3 {
+   text-align: center;
+   position: absolute;
+   margin-left: 300px;
+   margin-top: 50px;
 
+}
+.main {
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+}
+
+.main66 {
+   text-align: center;
+   position: absolute;
+   justify-content: space-between;
+   word-spacing: 1000px;
+   top: 0;
+   left: 0;
+   right: 0;
+   margin-top: 260px;
+   margin-left: 265px;
+   font-size: 20px;
+   text-decoration-color: .2 linear;
+}
+ .main66:hover {
+   color: #696969;
+
+ }
+ 
+.main5 {
+   text-align: center;
+   position: absolute;
+   margin-top: 260px;
+   margin-left: 300px;
+   justify-content: center;
+
+}
+
+ .o1 {
+
+   border-radius: 50%;
+ }
+
+.main55 {
+   
+   position: absolute;
+   margin-left: 335px;
+   margin-top: 260px;
+
+
+}
+.main6 {
+   text-align: center;
+   margin-left: -90px;
+   margin-top: 305px;
+}
+.o2 {
+   border-radius: 50%;
+}  
+.main76 {
+   position: absolute;
+   margin-left: 700px;
+   margin-top: -59px;
+}
+.main7 {
+   position: absolute;
+   text-align: center;
+   margin-left: 1010px;
+   margin-top: -57px;
+
+}
+.o3 {
+   border-radius: 50%;
+
+}
+.main77 {
+   position: absolute;
+   margin-left: 1050px;
+   margin-top: -58px;
+
+}
+.main90 {
+   position: absolute;
+   color: #8A2BE2;
+   margin-left: 775px;
+   margin-top: -10px;
+   font-size: 18px;
+}
